Fixes vertical alignment of post navigation arrows

--- a/src/components/PostImage/PostImage.css
+++ b/src/components/PostImage/PostImage.css
@@ -1,4 +1,5 @@
 .post-image {
+  position: relative;
   grid-area: content;
   display: grid;
   grid-template-columns: 100%;
